--- a/css/new_file.css
+++ b/css/new_file.css
@@ -10,22 +10,14 @@
 
 .div1{
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	margin: auto;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
 }
 
-.div2{
+.input1{
 	position: absolute;
-	max-width: 300px;
-	max-height: 100px;
-	margin: auto;
-	left: -170px;
-	right: 0;
-	top: 0;
-	bottom: 0;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
 }
